fixed image overflow issue on home page

--- a/styles/sass/_sections.scss
+++ b/styles/sass/_sections.scss
@@ -6,8 +6,8 @@
 
 // What is it section styling
 .what-is-it {
-	height: 100vh;
 	margin-top: 3rem;
+	
 
 	.image-container {
 		margin: 0 auto;
@@ -52,7 +52,6 @@
 
 // How it works section styling
 .how-it-works {
-	height: 100vh;
 	margin-top: 3rem;
 
 	.image-container {
@@ -102,7 +101,6 @@
 
 // How its expressed section
 .how-its-expressed {
-	height: 100vh;
 	margin-top: 3rem;
 
 	.image-container {
@@ -148,8 +146,8 @@
 
 // additional factors section
 .additional-factors {
-	height: 100vh;
 	margin-top: 3rem;
+	margin-bottom: 7rem;
 
 	.image-container {
         margin: 0 0 1.5rem 0;
